--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,10 @@ jobs:
       with:
         role-to-assume: arn:aws:iam::668096754719:role/t_rodman
         aws-region: us-west-2  
+
+    - uses: dkershner6/aws-ssm-getparameters-action@v1
+      with:
+          parameterPairs: "/trust-me = test"
+          # The part before equals is the ssm parameterName, and after is the ENV Variable name for the workflow.
+          # No limit on number of parameters. You can put new lines and spaces in as desired, they get trimmed out.
+          withDecryption: "true" # defaults to true
