--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
 
     - uses: dkershner6/aws-ssm-getparameters-action@v1
       with:
-          parameterPairs: "/trust-me = test"
+          parameterPairs: "/trust-him = test"
           # The part before equals is the ssm parameterName, and after is the ENV Variable name for the workflow.
           # No limit on number of parameters. You can put new lines and spaces in as desired, they get trimmed out.
           withDecryption: "true" # defaults to true
