--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,9 @@ name: 'test'
 on:
   push
 
+env:
+  ACTIONS_RUNNER_DEBUG: True
+  ACTIONS_STEP_DEBUG: true
 jobs:
   deploy:
     name: extract ssm trust-me
